--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,24 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'TableJob'
+        )
+    }
+}
+
 dependencies {
     compile 'org.apache.hadoop:hadoop-common:2.6.0-cdh5.14.0'
     compile 'org.apache.hadoop:hadoop-mapreduce-client-core:2.6.0-cdh5.14.0'
     compile 'org.apache.hadoop:hadoop-mapreduce-client-jobclient:2.6.0-cdh5.14.0'
-    compile 'org.apache.hbase:hbase-client:1.2.0-cdh5.14.0'
-    compile 'org.apache.hbase:hbase-server:1.2.0-cdh5.14.0'
+    //compile 'org.apache.hbase:hbase-client:1.2.0-cdh5.14.0'
+    //compile 'org.apache.hbase:hbase-server:1.2.0-cdh5.14.0'
+    compile group: 'org.apache.hbase', name: 'hbase', version: '0.94.5'
+}
+
+dependencies {
+    testCompile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
 }
